--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>I hope this works</title>
+    <title>This Hyper Text Mark Up Language is about </title>
   </head>
   <body>
-
+    <ul>
+      <li>Aurora</li>
+      <li>Lone Tree</li>
+      <li>Littleton</li>
+    </ul>
   </body>
 </html>
