Commiting changes to cities

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <title>This Hyper Text Mark Up Language is about </title>
   </head>
   <body>
-    <ul>
-      <li>Aurora</li>
-      <li>Lone Tree</li>
-      <li>Littleton</li>
-    </ul>
+    <h1>Cities I want to visit in the future</h1>
+      <ol>
+        <li>Tokyo</li>
+        <li>Hong Kong</li>
+        <li>Real Madrid</li>
+      </ol>
+      <p>I would like to visit Tokyo and or Japan in general because I am a fan of their culture.
+      Hong Kong is a rapidly changing city with a massive volume of people that's uncomparable to any other city.
+      As for Real Madrid I want to visit the soccer stadium.       </p>
+    <h2>Cities I have resided in the past</h2>
+      <ul>
+        <li>Aurora</li>
+        <li>Lone Tree</li>
+        <li>Littleton</li>
+      </ul>
+      <p>I have lived in a number of different cities in Colorado as a result of varying job locations.  I purposley sign short lease agreements in order to accomadte the inevitable changes in job location.</p>
   </body>
 </html>
