--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <body>
     <h1>Cities I want to visit in the future</h1>
       <ol>
-        <li>Tokyo</li>
-        <li>Hong Kong</li>
-        <li>Real Madrid</li>
+        <li>Tokyo<span>Japanese Culture is awesome!</span></li>
+        <li>Hong Kong<span>Massive population of uniqueness</span></li>
+        <li>Real Madrid<span>Famous soccer team!</span></li>
       </ol>
       <p>I would like to visit Tokyo and or Japan in general because I am a fan of their culture.
       Hong Kong is a rapidly changing city with a massive volume of people that's uncomparable to any other city.
       As for Real Madrid I want to visit the soccer stadium.       </p>
     <h2>Cities I have resided in the past</h2>
       <ul>
-        <li>Aurora</li>
-        <li>Lone Tree</li>
-        <li>Littleton</li>
+        <li>Aurora<span>First city I lived in due to low rent and convenience.</span></li>
+        <li>Lone Tree<span>Second city I lived in the state of CO for pure convenience.</span></li>
+        <li>Littleton&lt;span&gt;Free rent! Whoo whoo</span></li>
       </ul>
-      <p>I have lived in a number of different cities in Colorado as a result of varying job locations.  I purposley sign short lease agreements in order to accomadte the inevitable changes in job location.</p>
+      <p>I have lived in a number of different cities in Colorado as a result of varying job locations.  I purposley sign short lease agreements in order to accomadte the inevitable changes in job location.
+</p>
   </body>
 </html>
