Some semantics as well as an additon of an image.

--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>This Hyper Text Mark Up Language is about </title>
+<img src="https://developer.cdn.mozilla.net/media/img/mdn-logo-sm.png" alt="Click to load" style="width:120;height:80;">
   </head>
   <body>
     <h1>Cities I want to visit in the future</h1>
       <ol>
-        <li>Tokyo<span>Japanese Culture is awesome!</span></li>
-        <li>Hong Kong<span>Massive population of uniqueness</span></li>
-        <li>Real Madrid<span>Famous soccer team!</span></li>
+        <li>Tokyo  <span>Japanese Culture is awesome!</span></li>
+        <li>Hong Kong  <span>Massive population of uniqueness</span></li>
+        <li>Real Madrid  <span>Famous soccer team!</span></li>
       </ol>
       <p>I would like to visit Tokyo and or Japan in general because I am a fan of their culture.
       Hong Kong is a rapidly changing city with a massive volume of people that's uncomparable to any other city.
       As for Real Madrid I want to visit the soccer stadium.       </p>
     <h2>Cities I have resided in the past</h2>
       <ul>
-        <li>Aurora<span>First city I lived in due to low rent and convenience.</span></li>
-        <li>Lone Tree<span>Second city I lived in the state of CO for pure convenience.</span></li>
-        <li>Littleton&lt;span&gt;Free rent! Whoo whoo</span></li>
+        <li> <strong>Aurora</strong> <span>First city I lived in due to low rent and convenience.</span></li>
+        <li> <em>Lone Tree</em> <span>Second city I lived in the state of CO for pure convenience.</span></li>
+        <li> <strong>Littleton</strong> <span>Free rent! Whoo whoo</span></li>
       </ul>
       <p>I have lived in a number of different cities in Colorado as a result of varying job locations.  I purposley sign short lease agreements in order to accomadte the inevitable changes in job location.
 </p>
