Linked favorites to index as well as added a table

--- a/favorites.html
+++ b/favorites.html
@@ -2,16 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <a href="index.html">Cities Page</a>
     <title></title>
   </head>
   <body>
     <table>
-      <thead>
+    <colgroup>
+        <col span="2">
+    </colgroup>
         <tr>
-          <th>Table Header</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Favorite Animal</th>
         </tr>
-      </thead>
+        <tr>
+          <td>Nate</td>
+          <td>Bauer</td>
+          <td>Painted Turtle</td>
+        </tr>
     </table>
-
-  </body>
-</html>
