--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>This Hyper Text Mark Up Language is about </title>
 <img src="https://developer.cdn.mozilla.net/media/img/mdn-logo-sm.png" alt="Click to load" style="width:120;height:80;">
+<video controls>
+<source src="https://www.youtube.com/watch?v=JFz3t6aMqD0" type="video/webm">
+<source src="https://www.youtube.com/watch?v=JFz3t6aMqD0" type="video/mp4">
+I'm sorry; your browser doesn't support HTML5 video in WebM with VP8/VP9 or MP4 with H.264.
+</video> 
   </head>
   <body>
     <h1>Cities I want to visit in the future</h1>
